package bioladen.statistic.chart;

public interface Charts {
	String getJsonCharts();

	int size();
}
